--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -1,3 +1,539 @@
-/* body{
-    margin: 0 auto;
+/* START RESET CSS */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
+}
+
+body {
+    line-height: 1;
+}
+
+ol,
+ul {
+    list-style: none;
+}
+
+blockquote,
+q {
+    quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
+}
+
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+/* END RESET CSS */
+
+#navbar{
+    padding: 24px 156px
+}
+.menu{
+    gap: 60px;
+    padding-left: 140px;
+}
+.menu_item{
+    gap: 14px;
+    position: relative;
+}
+
+.video{
+    /* height: 540px; */
+    width: 100%;
+    /* position: relative */
+
+}
+
+#hero{
+    position: relative;
+}
+
+.submenu{
+
+    display: none;
+    position: absolute;
+    top: 100%;
+    padding: 12px 24px;
+    border-radius: 4px;
+        border: 1px solid #EDECEE;
+        background: #FFF;
+        white-space: nowrap;
+        left: -70%;
+        z-index: 999
+}
+.menu_item:hover > .submenu{
+    display: block;
+}
+.submenu ul li{
+    font-family: 'Figtree';
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 26px;
+    cursor: pointer;
+    margin-top: 4px;
+}
+.menu_item__text {
+    font-size: 18px;
+    font-family: 'Figtree';
+    font-weight: 600;
+    line-height: 26px;
+    cursor: pointer;
+}
+.rfq_button{
+    padding: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    color: #1E1C20;
+    font-family: 'Figtree';
+    border-radius: 2px;
+    border: 1px solid #1E1C20;
+    background-color: inherit;
+}
+
+.hero_content{
+    position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+}
+.hero_title{
+    text-align: center;
+        text-shadow: 2px 5px 14px rgba(161, 161, 161, 0.35);
+        font-family: 'Figtree';
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 32px;
+        color: #FFF;
+        margin-top: 29px;
+}
+.hero_btn{
+    padding: 20px 40px;
+    font-family: Figtree;
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 32px;
+        color: #FFF;
+        border-radius: 2px;
+        background-color: #000;
+        margin-top: 21px;
+        transition: all 1.5s ease;
+        border: none;
+}
+.hero_btn:hover{
+    background-color: #E71420;
+}
+#partners{
+    margin-top: 35px;
+}
+.partners_img{
+    filter: grayscale(100%);
+    transition: all 1s ease;
+}
+.partners_img:hover {
+    filter: grayscale(0);
+}
+#about{
+    padding: 80px 156px
+}
+.about_title p{
+    color: #FF6835;
+        font-size: 38px;
+        font-family: 'Figtree';
+        font-weight: 500;
+        line-height: 50px;
+        margin-bottom: 20px;
+}
+.about_description p{
+    color: #3B3741;
+        font-size: 16px;
+        font-family: 'Roboto';
+        font-weight: 400;
+        line-height: 24px;
+}
+.video_about{
+    width: 377px;
+    border-radius: 9999px;
+    /* height: 377px; */
+}
+#services{
+    padding: 80px 156px;
+}
+.services_title{
+    color: #3B3741;
+        font-size: 16px;
+        font-family: 'Roboto';
+        font-weight: 400;
+        line-height: 24px;
+}
+.services_subtitle{
+    color: #333333;
+        font-size: 38px;
+        font-family: Figtree;
+        font-weight: 600;
+        text-transform: uppercase;
+        line-height: 50px;
+        margin-top: 20px;
+}
+.service_wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin-top: 40px;
+}
+.service_name{
+    color: #0F0E10;
+        font-size: 24px;
+        font-family: 'Figtree';
+        font-weight: 600;
+        line-height: 30px;
+}
+.service_description{
+    color: #1E1C20;
+        font-size: 16px;
+        font-family: Roboto;
+        font-weight: 400;
+        line-height: 24px;
+}
+
+.service_btn{
+    color: white;
+        font-size: 14px;
+        font-family: Figtree;
+        font-weight: 500;
+        line-height: 24px;
+        border-radius: 2px;
+        border: none;
+        background-color: #000;
+        padding: 10px;
+        transition: all 1s ease;
+}
+.service_btn:hover{
+    background-color: #FF6835;
+}
+
+#business{
+    padding: 80px 156px;
+}
+
+.business_title{
+    color: #FF6835;
+        font-size: 38px;
+        font-family: Figtree;
+        font-weight: 600;
+        text-transform: uppercase;
+        line-height: 50px;
+}
+.business_wrapper{
+    margin-top: 40px;
+    display: flex;
+}
+.business_number{
+    color: #FFC3AE;
+        font-size: 38px;
+        font-family: 'Figtree';
+        font-weight: 500;
+        line-height: 26px;
+
+}
+.business_item__title{
+    color: #1E1C20;
+        font-size: 20px;
+        font-family: 'Roboto';
+        font-weight: 500;
+        line-height: 32px;
+}
+.business_item__description{
+    color: #4A4551;
+        font-size: 14px;
+        font-family: 'Roboto';
+        font-weight: 400;
+        line-height: 20px;
+}
+.business_item__wrapper{
+            margin-left: 14px;
+}
+#business .row > :nth-last-child(-n+2) {
+    margin-left: auto;
+    margin-right: auto;
+}
+#values{
+    padding: 100px 156px;
+}
+.values_section__title{
+    color: #2C2931;
+font-size: 38px;
+font-family: 'Figtree';
+font-weight: 600;
+text-transform: uppercase;
+line-height: 50px;
+}
+.value_wrapper{
+   display: flex;
+   align-items: center;
+   gap: 12px;
+   margin-top: 40px;
+   border: 1px #C9C7CB solid;
+   border-radius: 4px;
+   padding: 12px;
+}
+.value_item__title{
+    color: #2C2931;
+font-size: 20px;
+font-family: 'Figtree';
+font-weight: 600;
+line-height: 32px;
+}
+
+.value_item__description{
+    color: #6E6A74;
+font-size: 16px;
+font-family: 'Roboto';
+font-weight: 400;
+line-height: 24px;
+}
+.suppliers_section__title{
+    padding: 80px 156px;
+    padding-bottom: 40px;
+}
+.suppliers_section__title{
+    color: #FF6835;
+font-size: 38px;
+font-family: 'Figtree';
+font-weight: 600;
+text-transform: uppercase;
+line-height: 50px;
+}
+.swiper{
+    margin-top: 35px;
+}
+.certificates_bg__image{
+    width:100%
+}
+/* .certificates_bg{
+    position: relative;
 } */
+.certificates_header__title{
+    color: white;
+font-size: 48px;
+font-family: 'Figtree';
+font-weight: 700;
+line-height: 62px;
+}
+.certificates_header__subtitle{
+    color: white;
+font-size: 24px;
+font-family: 'Roboto';
+font-weight: 500;
+line-height: 44px;
+margin-top: 12px;
+}
+#certificates{
+    margin-top: 80px;
+    position: relative;
+}
+.certificates_header_wrapper{
+    position: absolute;
+    top:0%;
+    left: 50%;
+    margin-top: 40px;
+    /* transform: translate(-50%, -50%); */
+}
+.certificate_btn{
+    padding: 20px 40px;
+    background-color: #E71420;
+    color: white;
+font-size: 20px;
+font-family: Figtree;
+font-weight: 500;
+line-height: 32px;
+border: none;
+border-radius: 2px;
+margin-top: 24px;
+}
+.certificate_wrapper{
+    position: absolute;
+    bottom: 0%;
+    padding: 40px 156px;
+    /* background-color: #000; */
+    /* border-radius: 24px; */
+}
+.certificate_img__wrapper{
+    display: flex;
+    gap: 24px;
+}
+.certificate_wrapper__title{
+    color: white;
+font-size: 38px;
+font-family: 'Figtree';
+font-weight: 600;
+line-height: 50px;
+}
+#footer{
+    padding:55px 140px
+}
+.social_meadia__wrapper{
+    margin-top: 55px;
+    display: flex;
+    gap: 14px;
+}
+.social_media__icons{
+    display: flex;
+    gap: 14px;
+}
+.footer_logo{
+    margin-bottom:54px
+}
+.email_input{
+    margin-top: 28px;
+}
+.copyrights{
+    margin-top: 54px;
+}
+
+.footer_header{
+    color: #2C2931;
+font-size: 16px;
+font-family: 'Figtree';
+font-weight: 500;
+line-height: 24px;
+}
+.quick_links p,
+.services_links p,
+.contact_links p {
+    color: #3B3741;
+font-size: 14px;
+font-family: 'Roboto';
+font-weight: 400;
+line-height: 20px;
+    
+}
+.quick_links,
+.services_links,
+.contact_links {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+    margin-top: 18px;
+}
+.copyrights{
+    color: #4A4551;
+font-size: 14px;
+font-family: 'Roboto';
+font-weight: 400;
+line-height: 20px;
+}
+
