fix: mobile menu icon

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -621,7 +621,7 @@ margin-bottom: 16px;
         display: block;
     }
     .mobile_menu{
-        display: block;
+        display: block !important;
     }
     .rfq_button{
         padding: 5px
