--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,6 +4,26 @@
    License: none (public domain)
 */
 
+.concact_title {
+    color: #FF6835;
+    font-size: 38px;
+    font-family: 'Figtree';
+    font-weight: 600;
+    line-height: 50px;
+    word-wrap: break-word;
+    text-align: center;
+}
+
+.contact_subitle {
+    color: #4A4551;
+    font-size: 18px;
+    font-family: 'Roboto';
+    font-weight: 400;
+    line-height: 26px;
+    word-wrap: break-word;
+    text-align: center;
+}
+
 html,
 body,
 div,
@@ -92,6 +112,15 @@ video {
     font: inherit;
     vertical-align: baseline;
 }
+a {
+    color: inherit; 
+    /* blue colors for links too */
+    text-decoration: inherit;
+}
+ a:hover {
+    color: inherit;
+    /* Inherits color property from its parent */
+} 
 
 /* HTML5 display-role reset for older browsers */
 article,
@@ -261,13 +290,11 @@ margin-bottom: 6px;
 }
 .hero_title{
     text-align: center;
-        text-shadow: 2px 5px 14px rgba(161, 161, 161, 0.35);
-        font-family: 'Figtree';
-        font-size: 32px;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 32px;
-        color: #FFF;
+        color: white;
+            font-size: 32px;
+            font-family: 'Figtree';
+            font-weight: 700;
+            line-height: 32px;
         margin-top: 29px;
 }
 .hero_btn{
@@ -327,20 +354,20 @@ margin-bottom: 6px;
     display: none;
 } */
 .services_title{
-    color: #3B3741;
-        font-size: 16px;
-        font-family: 'Roboto';
-        font-weight: 400;
-        line-height: 24px;
+    color: #FF6835;
+        font-size: 38px;
+        font-family: 'Figtree';
+        font-weight: 500;
+        line-height: 32px;
 }
 .services_subtitle{
-    color: #333333;
-        font-size: 38px;
-        font-family: Figtree;
-        font-weight: 600;
-        text-transform: uppercase;
-        line-height: 50px;
-        margin-top: 20px;
+color: #444444;
+    font-size: 24px;
+    font-family: 'Figtree';
+    font-weight: 600;
+    text-transform: uppercase;
+    line-height: 50px;
+    margin-top: 20px;
 }
 .service_wrapper{
     display: flex;
@@ -349,6 +376,7 @@ margin-bottom: 6px;
     margin-top: 40px;
 }
 .service_name{
+    text-align: center;
     color: #0F0E10;
         font-size: 24px;
         font-family: 'Figtree';
@@ -631,6 +659,211 @@ margin-bottom: 16px;
 /* .mobile_menu{
     display: none !important;
 } */
+
+
+/* CONTACT PAGE */
+.contactpage_title{
+    color: #FF6835;
+        font-size: 38px;
+        font-family: 'Figtree';
+        font-weight: 600;
+        line-height: 50px;
+        word-wrap: break-word;
+        text-align: center;
+}
+.contactpage_subtitle{
+    color: #4A4551;
+        font-size: 18px;
+        font-family: 'Roboto';
+        font-weight: 400;
+        line-height: 26px;
+        word-wrap: break-word;
+        text-align: center;
+        margin-top: 14px;
+}
+.contact_form__img{
+    width: 100%;
+}
+.contact_form__title{
+    color: #1E1C20;
+        font-size: 28px;
+        font-family: 'Figtree';
+        font-weight: 500;
+        line-height: 44px;
+        word-wrap: break-word
+}
+.contact_form__wrapper{
+    margin-top: 56px;
+}
+.contact_form__subtitle{
+    color: #2C2931;
+        font-size: 14px;
+        font-family: 'Roboto';
+        font-weight: 400;
+        line-height: 20px;
+        word-wrap: break-word
+}
+.contact_input{
+    color: #6E6A74;
+        font-size: 14px;
+        font-family: 'Roboto';
+        font-weight: 400;
+        line-height: 20px;
+        word-wrap: break-word;
+        width: 100%;
+        border: 1px #EDECEE solid;
+        border-radius: 4px;
+        padding: 12px;
+        height: 44px;
+}
+.contact_input:focus{
+    outline: none;
+}
+.contact_form__label{
+    color: #6E6A74;
+        font-size: 14px;
+        font-family: 'Roboto';
+        font-weight: 500;
+        line-height: 20px;
+        word-wrap: break-word;
+        margin-bottom: 12px;
+        margin-top: 24px;
+}
+.form{
+    margin-top:38px
+}
+.subject{
+    color: #2C2931;
+        font-size: 14px;
+        font-family: 'Roboto';
+        font-weight: 700;
+        line-height: 20px;
+        word-wrap: break-word;
+        margin-top: 24px;
+        margin-bottom: 24px;
+}
+.subject_label{
+    color: #161518;
+        font-size: 14px;
+        font-family: 'Roboto';
+        font-weight: 400;
+        line-height: 20px;
+        word-wrap: break-word
+}
+
+    .custom_checkbox {
+        border-radius: 50%;
+        appearance: none;
+        /* For modern browsers */
+        -webkit-appearance: none;
+        /* For older versions of WebKit-based browsers */
+        -moz-appearance: none;
+        /* For older versions of Firefox */
+        width: 20px;
+        /* Adjust the size of the checkbox */
+        height: 20px;
+        /* Adjust the size of the checkbox */
+        /* border: 2px solid #000; */
+        background-color: #DBDADC;
+        /* Border color of the checkbox */
+        background-color: #fff;
+        /* Background color of the checkbox */
+    }
+
+    /* Change the background color of the checkbox when checked */
+    .custom_checkbox:checked {
+        background-color: #161518;
+        /* Change the background color */
+    }
+
+    /* Style the checkmark inside the checkbox */
+    .custom_checkbox:checked::before {
+        content: '\2713';
+        /* Unicode character for a checkmark */
+        display: block;
+        text-align: center;
+        line-height: 20px;
+        /* Adjust the line height to center the checkmark vertically */
+        color: #fff;
+        /* Color of the checkmark */
+    }
+        .custom_checkbox:not(:checked) {
+            background-color: #DBDADC;
+            /* Change the background color */
+        }
+                .custom_checkbox:not(:checked)::before {
+                    content: '\2713';
+                        /* Unicode character for a checkmark */
+                        display: block;
+                        text-align: center;
+                        line-height: 20px;
+                        /* Adjust the line height to center the checkmark vertically */
+                        color: #fff;
+                    /* Change the background color */
+                }
+    .checkbox_wrapper{
+        display: flex;
+        justify-content: space-between;
+    }
+    .send_btn{
+        color: white;
+            font-size: 14px;
+            font-family: Figtree;
+            font-weight: 500;
+            line-height: 24px;
+            word-wrap: break-word;
+            background-color: #000;
+            padding: 10px 84px;
+            border-radius: 4px;
+            border: none;
+            margin-top: 24px;
+    }
+    .quick_support{
+        color: #1E1C20;
+            font-size: 28px;
+            font-family: 'Figtree';
+            font-weight: 500;
+            line-height: 44px;
+            word-wrap: break-word
+    }
+    .quick_support__subtitle{
+        color: #2C2931;
+            font-size: 14px;
+            font-family: 'Roboto';
+            font-weight: 400;
+            line-height: 20px;
+            word-wrap: break-word;
+            margin-top: 10px;
+    }
+    #support{
+        margin-top:80px;
+        padding: 45px 0px;
+        background-color: #F7F7F7;
+        border-top: 1px #C9C7CB solid;
+            border-bottom: 1px #C9C7CB solid
+    }
+    .support_item__title{
+        color: #2C2931;
+            font-size: 18px;
+            font-family: 'Roboto';
+            font-weight: 500;
+            line-height: 26px;
+            word-wrap: break-word;
+            margin-top: 14px;
+    }
+    .support_item__subtitle{
+        color: #3B3741;
+            font-size: 14px;
+            font-family: 'Roboto';
+            font-weight: 400;
+            line-height: 20px;
+            word-wrap: break-word;
+            margin-top: 12px;
+    }
+    .support_item__wrapper{
+        margin-top: 48px;
+    }
+/* END CONTACT PAGE */
 
 @media screen and (max-width: 992px) {
     
@@ -988,3 +1221,5 @@ line-height: 20px;
     .certificates_header_wrapper{
         margin-top: 200px;
     }}
+
+
