--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -879,7 +879,49 @@ margin-bottom: 16px;
         
 /* END CONTACT PAGE */
 
+/* CETRIFICATE PAGE */
+.page_header{
+    font-family: 'Figtree';
+    font-weight: 600;
+    font-size: 38px;
+    line-height: 50px;
+    color: #FF6835;
+}
+.page_description{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 26px;
+    font-family: 'Roboto';
+    padding: 0px 100px;
+    color: #2C2931;
+}
+.certificate-bg-img{
+    width: 100%;
+    margin-top:80px
+}
+/*END CERTIFICATE PAGE */
+
 @media screen and (max-width: 992px) {
+    .page_description {
+            font-family: 'Roboto';
+                font-size: 12px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 20px;
+                color: #2C2931;
+                padding: 0px;
+        }
+        .page_header{
+            font-family: 'Figtree';
+                font-size: 24px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 32px;
+        }
+        .certificate-bg-img{
+            height: 200px;
+            object-fit: cover;
+        }
     .contactpage_title{
         color: #FF6835;
             font-size: 24px;
