--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -139,6 +139,7 @@ section {
 
 body {
     line-height: 1;
+    scroll-behavior: smooth;
 }
 
 ol,
@@ -226,6 +227,7 @@ margin-bottom: 6px;
     /* position: relative */
 
 }
+
 
 #hero{
     position: relative;
@@ -343,8 +345,7 @@ margin-bottom: 6px;
         line-height: 24px;
 }
 .video_about{
-    width: 377px;
-    border-radius: 9999px;
+    
     /* height: 377px; */
 }
 #services{
