--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -991,9 +991,9 @@ margin-bottom: 16px;
             padding: 0px;
             margin-top: 48px;
     }
-    br {
+    /* br {
             display: none;
-        }
+        } */
     .business_wrapper {
 
             border-bottom: none;
